implent image downloading for s3 and locally, switch to using database data instead of the external api